--- a/3.html
+++ b/3.html
@@ -27,7 +27,7 @@
    </tfoot>
 </table>
     <p>답을 찾아 주소창의 마지막 숫자를 변경해주세요.</P>
-      <p> ex) 답이 순서대로 269였다면 <br>https://asdf/269</p>
+      <p> ex) 답이 순서대로 269였다면 <br>https://tancado.github.io/web1.html/269.html</p>
 
   </body>
 </html>
