--- a/2.html
+++ b/2.html
@@ -9,7 +9,7 @@
     <h3>지금부터 본격적인 게임을 시작하겠습니다.</h3>
 
 
-    <p><a href="시작.html">전단계로</a> <a href="https://i.ytimg.com/vi/H4fKfz5rcx8/maxresdefault.jpg">다음단계로</a></p>
+    <p><a href="start.html">전단계로</a> <a href="https://i.ytimg.com/vi/H4fKfz5rcx8/maxresdefault.jpg">다음단계로</a></p>
     <p><a href="3.html">포기하기</a></p>
   </body>
 </html>
