--- a/goal.html
+++ b/goal.html
@@ -6,5 +6,10 @@
   </head>
   <body>
     <h1>저도 역시 그렇게 생각했어요 ㅎㅎ 감사합니다.</h1>
+    <br>
+    <br>
+    <br>
+       
+    <h2><a href="goal2.html">처음으로 돌아가 다시 풀기</a></h>
   </body>
 </html>
