--- a/goal2.html
+++ b/goal2.html
@@ -5,7 +5,7 @@
     <title>그만 속을때도 됐잖아요 ㅠㅠ</title>
   </head>
   <body>
-    <h1><img src="3.jpg" alt="400"></h1>
+    <h1><img src="3.jpg" width="400"></h1>
     <p><a href="start.html"><strong>이제 그만 속을때도 됐잖아요 ㅠㅠ</strong></a></p>
   </body>
 </html>
