--- a/goal2.html
+++ b/goal2.html
@@ -5,7 +5,7 @@
     <title>그만 속을때도 됐잖아요 ㅠㅠ</title>
   </head>
   <body>
-    <h1><img src="3.jpg" width="400"></h1>
-    <p><a href="start.html"><strong>이제 그만 속을때도 됐잖아요 ㅠㅠ</strong></a></p>
+    <h1><a href="start.html"><img src="3.jpg" width="400"></a></h1>
+    <p><a href="https://www.instagram.com/leehl92/"><strong>이제 그만 속을때도 됐잖아요 ㅠㅠ</strong></a></p>
   </body>
 </html>
