--- a/start.html
+++ b/start.html
@@ -12,7 +12,7 @@
       <a href="https://i.ytimg.com/vi/H4fKfz5rcx8/maxresdefault.jpg"><button type="button" name="button">2</button></a>
       <a href="2.html"><button type="button" name="button">3</button></a>
       <a href="https://www.instagram.com/leehl92/"><button type="button" name="button">4</button></a></p>
-      <img src="https://cdn.pixabay.com/photo/2016/10/24/23/11/doors-1767562_960_720.jpg" alt="미궁사진">
+      <img src="door.jpg" alt="미궁사진">
     <p> 만약 막혔다면 뒤로가기를 해주세요!</p>
   </body>
 </html>
